# buildpacks-procfile

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  Makefile  README.md  SPEC.md  buildpack.toml  go.mod  go.sum  releaser.go  releaser_test.go
.circleci/: config.yml
.github/actions/install-rust/: action.yml
.github/actions/restore-cargo-cache/: action.yml
.github/actions/save-cargo-cache/: action.yml
.github/workflows/: ci.yml  release.yml
cmd/release/: main.go
lib/: buildpack.rb  procfile.rb
src/: build.rs  detect.rs  display.rs  error.rs  launch.rs  lib.rs  main.rs  procfile.rs  test_helper.rs
test/: test_buildpack.rb  test_procfile.rb
test/fixtures/app_with_procfile/: Procfile
tests/: integration_test.rs
tests/fixtures/app_with_procfile/: Procfile
tests/fixtures/complex_command_procfile/: Procfile
tests/fixtures/multiple_non_web_procfile/: Procfile
tests/fixtures/not_yaml_procfile/: Procfile
tests/fixtures/web_and_worker_procfile/: Procfile
tests/fixtures/worker_only_procfile/: Procfile
