[package]
name = "procfile-buildpack"
edition = "2021"
rust-version = "1.75"

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = "warn"
unwrap_used = "warn"

[dependencies]
indoc = "2"
libcnb = "0.17"
libherokubuildpack = { version = "0.17", default-features = false, features = ["error", "log"] }
linked-hash-map = "0.5"
regex = "1"

[dev-dependencies]
libcnb-test = "0.17"
