[package]
name = "procfile-buildpack"
edition = "2021"
rust-version = "1.76"

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[dependencies]
indoc = "2"
libcnb = { version = "0.22", features = ["trace"] }
libherokubuildpack = { version = "0.22", default-features = false, features = ["error", "log"] }
linked-hash-map = "0.5"
regex = "1"

[dev-dependencies]
libcnb-test = "0.22"
