[package]
name = "procfile-buildpack"
edition = "2021"
rust-version = "1.88"

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[dependencies]
annotate-snippets = "0.12"
bullet_stream = "0.11"
fs-err = "3"
indoc = "2"
libcnb = { version = "0.29", features = ["trace"] }
libherokubuildpack = { version = "0.29", default-features = false, features = ["error", "log"] }
linked-hash-map = "0.5"
winnow = "0.7"

[dev-dependencies]
libcnb-test = "0.29"
